--- a/PKT1.html
+++ b/PKT1.html
@@ -253,6 +253,11 @@
       opacity: 0.3;
     }
 
+    #promptBox {
+      font-size: 16px;   /* increase/decrease as needed */
+      line-height: 1;  /* makes it easier to read */
+    }
+
   </style>
 </head>
 
